ingress-rule/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: e-commerce
  name: e-commerce
  annotations:
    kubernetes.io/ingress.class: nginx # this should be uncommented if ingress used in "regular" cluster
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: capstone.cloudbusters.space
    http:
      path:
        backend:
          service:
            name: front-end
            port:
              number: 80
